# ATC-Guardian

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  SETUP.md  main.py  presentation.html  pyproject.toml  render.yaml  start.bat
agents/: dispatch.py
agents/conflict_detector/: agent.py  prompts.py  pyproject.toml
agents/coordinator/: agent.py  prompts.py  pyproject.toml
agents/emergency_response/: agent.py  prompts.py  pyproject.toml
agents/ground_ops/: agent.py  prompts.py  pyproject.toml
agents/safety_reviewer/: agent.py  prompts.py  pyproject.toml
agents/weather_analyst/: agent.py  prompts.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  runner.py
backend/app/core/: __init__.py  config.py
backend/app/routers/: __init__.py  audit.py  collaboration.py  data.py  decisions.py  weather.py  websocket.py  whatif.py
backend/app/services/: __init__.py  advisory_ingester.py  audit_export.py  audit_service.py  band_poller.py  band_poster.py  decision_service.py  opensky_client.py  sim_agents.py  simulation_service.py  weather_client.py
data/: __init__.py  generator.py  scenarios.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentChatPanel.tsx  AgentDetailPage.tsx  AgentFlashBar.tsx  AgentIcons.tsx  AgentTeamPage.tsx  AuditTimeline.tsx  CollaborationFlow.tsx  DecisionPanel.tsx  RadarView.tsx  ScenarioControls.tsx
frontend/src/hooks/: useRadarData.ts
frontend/src/lib/: constants.ts  types.ts
frontend/src/stores/: atcStore.ts
ml/: __init__.py  conflict.py  trajectory.py  whatif.py
scripts/: _check_band_mode.py  _run_agent.bat  demo_runner.py  setup.py  smoke_test.py  start.py  start_all.py
shared/: __init__.py  advisory.py  agent_roster.py  band_client.py  constants.py  detector.py  llm_config.py  models.py  partner_routing.py
tests/: __init__.py  test_agent_lifecycle.py  test_audit_export.py  test_band_client.py  test_band_live_wire_format.py  test_band_loop.py  test_collaboration_graph.py  test_conflict.py  test_decision_service.py  test_detector.py  test_dispatch.py  test_end_to_end.py  test_events_and_veto.py  test_generator.py  test_partner_routing.py  test_safety_reviewer.py  test_trajectory.py  test_whatif.py
