[project]
name = "atc-guardian"
version = "0.1.0"
description = "Multi-agent ATC decision support system with Band of Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.49.0",
    # Agent framework deps (all agents run from the project venv)
    "band-sdk[langgraph,pydantic-ai,crewai]>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
