[project]
name = "atc-guardian-conflict-detector"
version = "0.1.0"
description = "ATC Guardian Conflict Detector Agent — CPA calculation and separation monitoring via Band"
requires-python = ">=3.12"
dependencies = [
    "band-sdk[pydantic-ai]>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
