[project]
name = "atc-guardian-ground-ops"
version = "0.1.0"
description = "ATC Guardian Ground Ops Agent — airport information and runway services via Band"
requires-python = ">=3.12"
dependencies = [
    "band-sdk[langgraph]>=1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
